--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <!--    <meta http-equiv="Content-Security-Policy"-->
+    <!--          content="default-src *; img-src * 'self' data: blob:;">-->
+
     <!--
       If you are serving your web app in a path other than the root, change the
       href value below to reflect the base path you are serving from.
