--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 
+    <script src="https://telegram.org/js/telegram-web-app.js" defer=""></script>
+
     <!--    <meta http-equiv="Content-Security-Policy"-->
     <!--          content="default-src *; img-src * 'self' data: blob:;">-->
 
